--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch:server": "scripty"
   },
   "dependencies": {
+    "config": "^1.26.1",
     "csv": "^1.1.1",
     "google-spreadsheet": "^2.0.3",
     "koa": "^2.2.0",
