--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "comma-dangle": ["error", "never"],
     "no-use-before-define": 0,
     "no-param-reassign": 0,
+    "no-restricted-syntax": 0,
     "import/no-extraneous-dependencies": 0,
     "arrow-body-style": 0,
     "react/jsx-filename-extension": 0,
