--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-spreadsheet": "^2.0.3",
     "koa": "^2.2.0",
     "koa-router": "^7.1.1",
+    "lodash": "^4.17.4",
     "request-promise-native": "^1.0.4"
   },
   "devDependencies": {
