--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.2.0",
     "koa-router": "^7.1.1",
     "lodash": "^4.17.4",
+    "randomcolor": "^0.5.3",
     "request-promise-native": "^1.0.4"
   },
   "devDependencies": {
